--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -1129,7 +1129,7 @@
     "if not os.path.exists('models'): \n",
     "    os.makedirs('models')\n",
     "\n",
-    "pickle.dump(model, open('models/CNN.model.pkl', 'wb'))"
+    "model.save(\"models/cnn.h5\")"
    ]
   },
   {
@@ -1143,7 +1143,7 @@
    "outputs": [],
    "source": [
     "# Load the model from disk\n",
-    "loaded_model = pickle.load(open('models/CNN.model.pkl', 'rb'))"
+    "loaded_model = keras.models.load_model(\"models/cnn.h5\")"
    ]
   },
   {
@@ -1180,22 +1180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "9rg7QNBde-fG"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\huaiyukhaw\\anaconda3\\envs\\ml\\lib\\site-packages\\librosa\\util\\utils.py:826: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "  return (x > x_pad[inds1]) & (x >= x_pad[inds2])\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "XX, yy = load_single_data(\"data/ravdess/Actor_01/03-01-05-02-02-02-01.wav\")"
    ]
@@ -1236,7 +1223,7 @@
    "source": [
     "# Predict for the test set\n",
     "XXTemp=np.expand_dims(XX, axis=2)\n",
-    "y_pred = model.predict(XXTemp)\n"
+    "XX, yy = load_single_data(\"data/ravdess/Actor_01/03-01-05-02-02-02-01.wav\") = model.predict(XXTemp)\n"
    ]
   },
   {
